@@ -1,10 +1,12 @@
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>xdg-file-dialog</title><meta name="generator" content="DocBook XSL Stylesheets V1.68.1"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry" lang="en"><a name="xdg-file-dialog"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>xdg-file-dialog &#8212; command line tool for providing file and director selection dialogs</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><code class="command">xdg-file-dialog</code>  [<code class="option">--help</code>] [<code class="option">--version</code>] [<code class="option">--openfilename <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--openfilenamelist <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--savefilename <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--directory <em class="replaceable"><code>DIRNAME</code></em></code>]</p></div></div><div class="refsect1" lang="en"><a name="description"></a><h2>Description</h2><p>
+<html><head><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1"><title>xdg-file-dialog</title><meta name="generator" content="DocBook XSL Stylesheets V1.68.1"></head><body bgcolor="white" text="black" link="#0000FF" vlink="#840084" alink="#0000FF"><div class="refentry" lang="en"><a name="xdg-file-dialog"></a><div class="titlepage"></div><div class="refnamediv"><h2>Name</h2><p>xdg-file-dialog &#8212; command line tool for providing file and directory selection dialogs</p></div><div class="refsynopsisdiv"><h2>Synopsis</h2><div class="cmdsynopsis"><p><code class="command">xdg-file-dialog</code>  [<code class="option">--help</code>] [<code class="option">--version</code>] [<code class="option">--title <em class="replaceable"><code>TITLE</code></em></code>] [<code class="option">--openfilename <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--openfilenamelist <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--savefilename <em class="replaceable"><code>FILENAME</code></em></code>] [<code class="option">--directory <em class="replaceable"><code>DIRNAME</code></em></code>]</p></div></div><div class="refsect1" lang="en"><a name="description"></a><h2>Description</h2><p>
       The xdg-file-dialog program can be used to let the native file selection dialog
       handle file and directory input.
     </p></div><div class="refsect1" lang="en"><a name="options"></a><h2>Options</h2><div class="variablelist"><dl><dt><span class="term"><code class="option">--help</code></span></dt><dd>
                 Show this help.
             </dd><dt><span class="term"><code class="option">--version</code></span></dt><dd>
             Show the xdg-utils version information.
+          </dd><dt><span class="term"> <code class="option">--title</code> <em class="replaceable"><code>TITLE</code></em></span></dt><dd>
+              Sets the dialog's title (caption) to the specified text.
           </dd><dt><span class="term"> <code class="option">--openfilename</code> <em class="replaceable"><code>FILENAME</code></em></span></dt><dd>
               Returns the filename with path for a file to read from. <em class="replaceable"><code>FILENAME</code></em> can optionally be used to specify path and filename of a preselection
           </dd><dt><span class="term"> <code class="option">--openfilenamelist</code> <em class="replaceable"><code>FILENAME</code></em></span></dt><dd>
@@ -18,4 +20,9 @@
 xdg-file-dialog --savefilename /tmp/foobar.png
 </pre><p>
       Asks for a save file name starting in directory /tmp and suggesting foobar.png as the filename
+    </p><p>
+        </p><pre class="programlisting">
+            xdg-file-dialog --title "Select a target folder" --directory /tmp
+        </pre><p>
+        Asks for a directory name starting in directory /tmp using the text "Select a target folder" as the dialog's title/caption.
     </p></div></div></body></html>
